# corngr

./: ADR-0001.md  API_CONTRACTS.md  ARCHITECTURE.md  BASELINE_PHASE_A.md  BASELINE_PHASE_B.md  BASELINE_PHASE_C.md  COLLABORATION_DEBUG.md  COLLABORATION_DEMO.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  SCHEMA_BRIDGE_MAPPING.md  SCHEMA_SPEC.md  SKILLS.md  SUPABASE_SETUP.md  TECHNICAL_BLUEPRINT.md  launch.sh  package-lock.json  package.json  run_demo.sh  supabase-rls-setup.sql  test_ws_role.cjs  test_ws_role.js  vite.config.ts
public/registry/: index.json  prod_legal.json  prod_medical.json
src/: App.css  App.tsx  DemoApp.css  DemoApp.tsx  main.tsx
src-tauri/: Cargo.toml  audit.jsonl  corngr_erp_node.key  corngr_node.key  demo.crng  tauri.conf.json
src-tauri/migrations/: 001_create_documents.sql  002_allow_public_access.sql  003_revert_public_access.sql  004_add_title_column.sql  005_enable_realtime.sql
src-tauri/src/: audit_log.rs  lib.rs  main.rs  tauri_commands.rs  websocket_server.rs
src-tauri/src/audit/: mod.rs  shipper.rs  verification_test.rs
src-tauri/src/erp/: abac.rs  audit_log.rs  caio_llm.rs  coa_templates.rs  db.rs  engine.rs  envelope.rs  errors.rs  fragments.rs  indexes.rs  ledger.rs  mod.rs  post.rs  replay.rs  status.rs  tauri_api.rs  types.rs
src-tauri/src/marketplace/: mod.rs
src-tauri/src/security/: guard.rs  keychain_store.rs  keystore.rs  mod.rs
src/components/: AppHeader.css  AppHeader.tsx  AuthPage.tsx  CommandPalette.css  CommandPalette.tsx  ConfirmModal.tsx  DevTools.tsx  DocumentList.css  DocumentList.tsx  (+16 more)
(+95 files in other folders)
